--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "json-server": "^0.14.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prestart:api":"node tools/createMockDB.js",
+    "start:api": "node tools/apiServer.js"
   },
   "eslintConfig": {
     "extends": "react-app"
