Ashish | adding thunk

--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prestart:api":"node tools/createMockDB.js",
+    "prestart:api": "node tools/createMockDB.js",
     "start:api": "node tools/apiServer.js"
   },
   "eslintConfig": {
@@ -29,5 +30,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "redux-immutable-state-invariant": "^2.1.0"
+  }
 }
