--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "json-server": "^0.14.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.4",
+    "react-loader-spinner": "^2.3.0",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
