--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
     "redux-immutable-state-invariant": "^2.1.0"
   }
 }
